// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimePicker /> accepts external \`id\` value 1`] = `
<TextInput
  id="ID"
  inputClassName="timepicker"
/>
`;

exports[`<TimePicker /> renders 1`] = `
<TextInput
  id="TimePicker-mockId"
  inputClassName="timepicker"
/>
`;

exports[`<TimePicker /> renders with a label 1`] = `
<TextInput
  id="TimePicker-mockId"
  inputClassName="timepicker"
  label="TimePicker label"
/>
`;
